--- a/mediapicker/src/main/res/values/strings.xml
+++ b/mediapicker/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="crop_image_menu_flip_vertically">Flip vertically</string>
     <string name="pick_image_intent_chooser_title">Select source</string>
     <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
+    <string name="label_select">Select</string>
+    <string name="label_select_photos_amp_videos_to_allow_only_this_app_manage">You\'ve given access to a select number of photos and videos.</string>
 </resources>
