--- a/photopicker/src/main/res/values/strings.xml
+++ b/photopicker/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MediaPicker</string>
+    <string name="app_name">PhotoPicker</string>
     <string name="label_camera">Camera</string>
     <string name="label_gallery">Gallery</string>
     <string name="label_select_photos">Select Photos</string>
